--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 *, *::before, *::after {
     box-sizing: border-box;
+font-family: Helvetica, sans-serif;
 }
 
 body {
@@ -20,6 +21,30 @@ body {
 .key {
     height: calc(var(--width) * 4);
     width: var(--width);
+    position: relative;
+}
+
+.key::before, .black.key::after {
+    content: attr(data-note);
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding-left: 8px;
+    padding-block: 4px;
+    font-size: 1.15rem;
+    font-style: italic;
+    opacity: .6;
+    user-select: none;
+}
+
+.black.key::before, .black.key::after {
+    font-size: .75rem;
+}
+
+.black.key::after {
+    content: attr(data-note-sharp);
+    bottom: 1.15rem;
 }
 
 .white {
@@ -37,6 +62,7 @@ body {
     background-color: #000;
     margin-left: calc(var(--width) / -2);
     margin-right: calc(var(--width) / -2);
+    color: #fff;
     z-index: 2;
 }
 
