--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body {
 
 .piano {
   display: flex;
-  box-shadow: 0 0 120px 0 rgb(49, 35, 62);
+  box-shadow: 0 0 120px 0 hsl(280, 80%, 8%);
   max-width: 100%;
 }
 
@@ -76,6 +76,7 @@ body {
   background-color: #000;
   margin-left: calc(var(--_width) / -2);
   margin-right: calc(var(--_width) / -2);
+  box-shadow: 4px 4px 10px 0 #333;
   z-index: 2;
 }
 
@@ -83,6 +84,7 @@ body {
   --_lightness: 35%;
   --_saturation: 80%;
   background-color: hsl(var(--_hue), var(--_saturation), var(--_lightness));
+  box-shadow: none;
 }
 
 /* Specifies active color for each key */
