Adding min-width - key-note cards

--- a/styles.css
+++ b/styles.css
@@ -171,6 +171,7 @@ div[data-note="B"].key-note-card.active h2 {
 
 .key-note-card {
   margin-inline: 5px;
+  min-width: 40px;
   max-width: 80px;
 }
 
