--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,11 @@ body {
   background-color: #222;
   margin: 0;
   min-height: 100vh;
+
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .piano {
